# Caprail

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: readme.html
openspec/changes/fix-editor-video-black-screen/: tasks.md
openspec/specs/annotation-editor/: spec.md
openspec/specs/app-shell/: spec.md
openspec/specs/async-export-progress/: spec.md
openspec/specs/branding/: spec.md
src/: clip-editor.html  editor.html  index.html  pin.html  record-control.html  record-indicator.html  record-overlay.html  screenshot-overlay.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.txt
src-tauri/src/: audio.rs  capture.rs  config.rs  export.rs  lib.rs  main.rs  ocr.rs  recording.rs  recording_clock.rs
src/locales/: en.json  zh.json
src/scripts/: clip-editor.logic.test.ts  clip-editor.logic.ts  clip-editor.ts  coordinate-mapping.test.ts  coordinate-mapping.ts  editor-canvas.ts  editor-history.ts  editor-output.ts  editor-session.logic.test.ts  editor-session.logic.ts  editor-tools.ts  editor-types.ts  editor-zoom.ts  editor.ts  i18n.ts  main.ts  overlay.ts  physical-capture.logic.test.ts  physical-capture.logic.ts  pin.ts  record-control.ts  record-indicator.ts  record-overlay.ts  recording.ts  resolution-context.test.ts  resolution-context.ts  save-dialog.logic.test.ts  save-dialog.logic.ts  screenshots.ts  settings-page.logic.test.ts  settings-page.logic.ts  settings-page.ts  settings.ts
src/styles/: editor.css  main.css
(+65 files in other folders)
