[package]
name = "caprail"
version = "0.1.2"
description = "A screenshot and screen recording tool for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "caprail_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [ "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-updater = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
dirs = "5"
image = "0.25"
arboard = "3"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Foundation",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
  "Win32_UI_HiDpi",
] }
